# lightning-boilerplate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.kr.md  README.md  environment.yaml  pyproject.toml  requirements.txt
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml
configs/data/: default.yaml
configs/debug/: default.yaml  fdr.yaml  profiler.yaml
configs/experiment/: resnet50.yaml
configs/hydra/: default.yaml
configs/logger/: default.yaml  wandb.yaml
configs/loggers/: csv.yaml
configs/model/: default.yaml
configs/trainer/: ddp.yaml
src/: datamodule.py  eval.py  model.py  train.py
src/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: conftest.py  test_configs.py  test_datamodules.py  test_train.py
tests/helpers/: run_if.py
