[tool.poetry]
name = "lightning-boilerplate"
version = "0.2.0"
description = "Lightning Boilerplate is inspired by lightning-hydra-template. This boilerplate use lightning and hydra to help ML/DL researchers/engineers efficiently conduct R&D with sklearn and torch."
authors = ["unerue <unerue@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
torch = {version = "2.0.1+cu117", source = "pytorch"}
torchvision = {version = "0.15.2+cu117", source = "pytorch"}
lightning = "^2.1.2"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
rootutils = "^1.0.7"
rich = "^13.5.2"
wandb = "^0.15.10"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"
mypy = "^1.5.1"
isort = "^5.12.0"
black = "^23.9.1"
ruff = "^0.1.6"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 10
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.isort]
lines-after-imports = 2

[tool.isort]
profile = "black"

[tool.black]

[tool.tox]
envlist = ["py39", "py310", "py311"]
skipsdist = "True"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
